--- a/src/app/auth/pages/layout-page/layout-page.component.html
+++ b/src/app/auth/pages/layout-page/layout-page.component.html
@@ -1,3 +1,12 @@
-<p>layout-page works!</p>
 
-<router-outlet></router-outlet>
+<!-- http://localhost:4200/auth/login -->
+
+<div class="grid p-3">
+  <div class="col-12 mt-5 md:col-6 md:col-offset-3 md:mt-8">
+
+    <router-outlet></router-outlet>
+
+  </div>
+</div>
+
+
