--- a/src/app/auth/pages/login-page/login-page.component.html
+++ b/src/app/auth/pages/login-page/login-page.component.html
@@ -1,1 +1,20 @@
-<p>login-page works!</p>
+
+<div class="flex flex-colum">
+  <span class="text-lg mb-4"><b>Login</b></span>
+
+  <mat-form-field>
+    <mat-label> Usuario </mat-label>
+    <input type="text" matInput placeholder="Nombre de usuario ">
+  </mat-form-field>
+
+  <mat-form-field>
+    <mat-label> Contraseña </mat-label>
+    <input type="password" matInput placeholder="Contraseña ">
+  </mat-form-field>
+
+  <button mat-button mat-flat-button color="primary">
+    <mat-icon>Save</mat-icon>
+    Login
+  </button>
+
+</div>
