--- a/src/app/auth/pages/login-page/login-page.component.html
+++ b/src/app/auth/pages/login-page/login-page.component.html
@@ -1,5 +1,5 @@
 
-<div class="flex flex-colum">
+<div class="flex flex-column">
   <span class="text-lg mb-4"><b>Login</b></span>
 
   <mat-form-field>
@@ -13,8 +13,13 @@
   </mat-form-field>
 
   <button mat-button mat-flat-button color="primary">
-    <mat-icon>Save</mat-icon>
+    <mat-icon>save</mat-icon>
     Login
   </button>
 
+  <div class="flex justify-content-end mt-5">
+    <a routerLink="/auth/new-account">¿Ya tienes cuenta?</a>
+  </div>
+
 </div>
+
