inicio de la configuracion del CRUD

--- a/src/app/heroes/pages/new-page/new-page.component.html
+++ b/src/app/heroes/pages/new-page/new-page.component.html
@@ -10,13 +10,16 @@
   <div class="col-12 sm:col-6">
     <mat-card>
       <mat-card-content>
-        <div class="grid">
+        <form class="grid" [formGroup]=" heroForm" (ngSubmit)="onSubmit()">
+
+
           <mat-form-field class="col-12 sm:col-6">
             <mat-label> Super héroe</mat-label>
             <input
               matInput
               type="text"
-              required=""
+              required
+              formControlName="superhero"
             />
           </mat-form-field>
 
@@ -25,7 +28,8 @@
             <input
               matInput
               type="text"
-              required=""
+              required
+              formControlName="alter_ego"
             />
           </mat-form-field>
 
@@ -34,7 +38,8 @@
             <input
               matInput
               type="text"
-              required=""
+              required
+              formControlName="first_appearance"
             />
           </mat-form-field>
 
@@ -43,20 +48,31 @@
             <input
               matInput
               type="text"
-              required=""
+              required
+              formControlName="characters"
             />
           </mat-form-field>
 
           <mat-form-field class="col-12">
             <mat-label> Creador</mat-label>
-            <mat-select required="">
+            <mat-select formControlName="publisher" required>
               <mat-option *ngFor="let publisher of publishers"
               [value]="publisher.id">
                 {{publisher.desc}}
               </mat-option>
             </mat-select>
           </mat-form-field>
-        </div>
+
+          <mat-form-field class="col-12">
+            <mat-label> Alternative image</mat-label>
+            <input
+              matInput
+              type="text"
+              formControlName="alt_img"
+            />
+          </mat-form-field>
+
+        </form>
 
        <div class="flex justify-content-between">
           <button mat-flat-button
@@ -66,6 +82,7 @@
           </button>
           <button mat-flat-button
             color="primary"
+            (click)="onSubmit()"
           >
             Guardar
           </button>
@@ -76,8 +93,10 @@
 
   <div class="col-12 sm:col-6">
     <mat-card>
-      <img src="" alt="imagen del heroe" mat-card-image>
+      <img [src]="currentHero | heroImage" alt="imagen del heroe" mat-card-image>
     </mat-card>
   </div>
 
 </div>
+
+
