--- a/src/app/heroes/pages/new-page/new-page.component.html
+++ b/src/app/heroes/pages/new-page/new-page.component.html
@@ -1,6 +1,7 @@
 <h1><strong>
-  Editar/Agregar Héroe
-  <small>superman</small>
+  {{currentHero.id ? 'Editar' : 'Agregar'}}
+  héroe
+  <small *ngIf="currentHero.id">: {{currentHero.superhero}}</small>
 </strong></h1>
 
 <mat-divider class="mb-2"></mat-divider>
@@ -77,9 +78,12 @@
        <div class="flex justify-content-between">
           <button mat-flat-button
             color="warn"
+            *ngIf="currentHero.id"
+            (click)="onDeleteHero()"
           >
             Borrar
           </button>
+          <span></span>
           <button mat-flat-button
             color="primary"
             (click)="onSubmit()"
